Creación del endpoint para crear usuarios

--- a/.env
+++ b/.env
@@ -18,3 +18,8 @@
 APP_ENV=dev
 APP_SECRET=fd9f668d45d2b65d68a80495ca38d3b6
 ###< symfony/framework-bundle ###
+
+###> doctrine/mongodb-odm-bundle ###
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DB=apiSymfony
+###< doctrine/mongodb-odm-bundle ###
