Creación del endpoint para crear y actualizar usuario

--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,16 @@
         "doctrine/mongodb-odm-bundle": "^4.6",
         "doctrine/orm": "^2.16",
         "mongodb/mongodb": "^1.16",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.23",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/property-access": "6.3.*",
+        "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/serializer": "6.3.*",
         "symfony/validator": "6.3.*",
@@ -70,6 +75,7 @@
         }
     },
     "require-dev": {
+        "ext-xdebug": "^3.1",
         "symfony/maker-bundle": "^1.50"
     }
 }
