--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/lexer": "^2",
         "doctrine/mongodb-odm-bundle": "^4.6",
         "doctrine/orm": "^2.16",
+        "lexik/jwt-authentication-bundle": "^2.19",
         "mongodb/mongodb": "^1.16",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.23",
