--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,6 +21,11 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    App\EventListener\TokenListener:
+        arguments:
+            $jwtManager: '@lexik_jwt_authentication.jwt_manager'
+        tags:
+            - { name: kernel.event_listener, event: kernel.controller }
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
