Endpoints para la creación y pago de facturas

--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ APP_SECRET=fd9f668d45d2b65d68a80495ca38d3b6
 ###< symfony/framework-bundle ###
 
 ###> doctrine/mongodb-odm-bundle ###
-MONGODB_URL=mongodb://localhost:27017
-MONGODB_DB=apiSymfony
+MONGODB_URL=mongodb://gasolapp_mongo:27017
+MONGODB_DB=gasolapp_mongo
 ###< doctrine/mongodb-odm-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
