--- a/.env
+++ b/.env
@@ -29,3 +29,12 @@ JWT_SECRET_KEY=
 JWT_PUBLIC_KEY=
 JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
