--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "symfony/flex": "^2",
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/google-mailer": "6.3.*",
+        "symfony/mailer": "6.3.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.3.*",
         "symfony/property-info": "6.3.*",
