Uso de referencias direccionales en los documentos

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,5 +32,19 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
+    App\Repository\UserRepository:
+        arguments:
+            $registry: '@doctrine_mongodb'
+            $documentClass: 'App\Document\User'
+
+    App\Repository\ProductRepository:
+        arguments:
+            $registry: '@doctrine_mongodb'
+            $documentClass: 'App\Document\Product'
+
+    App\Repository\InvoicesRepository:
+        arguments:
+            $registry: '@doctrine_mongodb'
+            $documentClass: 'App\Document\Invoice'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
