Refactorización para la eliminación de productos y format de hora

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,7 +18,7 @@
 
     <testsuites>
         <testsuite name="Unit Tests">
-            <directory>tests/Document</directory>
+            <directory>tests/</directory>
         </testsuite>
     </testsuites>
 
