--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,15 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.23",
         "symfony/apache-pack": "^1.0",
+        "symfony/browser-kit": "6.3.*",
         "symfony/console": "6.3.*",
+        "symfony/css-selector": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
         "symfony/google-mailer": "6.3.*",
+        "symfony/http-client": "6.3.*",
         "symfony/mailer": "6.3.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.3.*",
@@ -81,10 +84,11 @@
         }
     },
     "require-dev": {
+        "ext-mongodb": "*",
+        "phpunit/php-code-coverage": "^10.1",
         "phpunit/phpunit": "^10.3",
         "symfony/maker-bundle": "^1.50",
         "symfony/stopwatch": "6.3.*",
-        "symfony/web-profiler-bundle": "6.3.*",
-      "ext-mongodb": "*"
+        "symfony/web-profiler-bundle": "6.3.*"
     }
 }
