--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 ###> symfony/framework-bundle ###
 /.env.local
 /.env
-.env.test
 /.env.test
 /.env.local.php
 /.env.*.local
@@ -9,6 +8,7 @@
 /public/bundles/
 /var/
 /vendor/
+/reports
 ###< symfony/framework-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
