--- a/.env
+++ b/.env
@@ -38,3 +38,10 @@ JWT_PASSPHRASE=
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+#MESSENGER_TRANSPORT_DSN=doctrine://default
+###< symfony/messenger ###
