--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/lexer": "^2",
+        "doctrine/mongodb-odm": "^2.5",
         "doctrine/mongodb-odm-bundle": "^4.6",
         "doctrine/orm": "^2.16",
         "lexik/jwt-authentication-bundle": "^2.19",
         "mongodb/mongodb": "^1.16",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.23",
+        "symfony/amqp-messenger": "6.3.*",
         "symfony/apache-pack": "^1.0",
         "symfony/browser-kit": "6.3.*",
         "symfony/console": "6.3.*",
@@ -25,6 +27,7 @@
         "symfony/google-mailer": "6.3.*",
         "symfony/http-client": "6.3.*",
         "symfony/mailer": "6.3.*",
+        "symfony/messenger": "6.3.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.3.*",
         "symfony/property-info": "6.3.*",
@@ -33,7 +36,8 @@
         "symfony/serializer": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/validator": "6.3.*",
-        "symfony/yaml": "6.3.*"
+        "symfony/yaml": "6.3.*",
+        "ext-amqp": "*"
     },
     "config": {
         "allow-plugins": {
