--- a/.env
+++ b/.env
@@ -38,3 +38,4 @@ JWT_PASSPHRASE=
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+#MESSENGER_TRANSPORT_DSN=
