--- a/.env
+++ b/.env
@@ -44,3 +44,4 @@ JWT_PASSPHRASE=
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 #MESSENGER_TRANSPORT_DSN=doctrine://default
 ###< symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=sync://
